Moved the feedback message into a Div instead of a Span and added styling to get the vertical alignment correct.

--- a/src/sass/myservice-sliding-panel-top.scss
+++ b/src/sass/myservice-sliding-panel-top.scss
@@ -83,7 +83,8 @@
 
 	.trial-message {
 		font-size:0.8em;
-		padding:0 0 0 0.5em;
+		padding:0.5em 0 0 0.5em;
+		display:inline-block;
 	}
 
 }
